Fix layout issues

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -39,12 +39,19 @@ a {
     padding-right: 0;
 }
 
-.logoClear {
-    clear: both;
-}
-
 .navdiv {
     width: 190px;
+    margin: 0 auto;
+    padding: 0;
+    padding-top: 12px;
+    li{
+        display: inline;
+        padding-left: 20px;
+        padding-right: 20px;
+        a{
+            color: $blue;
+        }
+    }
 }
 
 hr {
@@ -98,11 +105,16 @@ hr {
     transition-timing-function: ease-out;
 }
 
+.logoContainer{
+    margin: 0 auto;
+    width: 200px;
+}
+
 .doozieslogo {
     background: url('DooziesLogo.png');
     background-size: 175px 175px;
     background-repeat: no-repeat;
-    width: 350px;
+    width: 200px;
     height: 175px;
     border: 0;
     background-position: center;
@@ -183,6 +195,11 @@ h1.dooziesTextLogo {
     }
 }
 
+.about_seg {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .hook_row {
     background: 
     linear-gradient(
@@ -192,19 +209,18 @@ h1.dooziesTextLogo {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 500px;
     box-shadow: inset 0px 0px 100px black;
 }
 
 .hook_div {
-    padding-top: 100px;
     h1, h2 {
         color: white;
         text-shadow: 2px 2px 5px black;
         line-height: 150%;
+        margin: 0;
     }
     .col-md-12{
-        margin-top: 5%;
+        padding: 200px 0px 200px 0px;
     }
     h1 {
         font-size: 4em;
@@ -218,19 +234,31 @@ h1.dooziesTextLogo {
     width: 100%;
     height: 250px;
     margin-bottom: 20px;
+    box-shadow: 0px 0px 10px black;
 }
 
-.info p {
+.info_row p {
     font-size: 1.5em;
     text-align: center;
 }
 
-.info {
+.info_row {
     padding-bottom: 25px;
-}
-
-.about {
-    padding-bottom: 25px;
+    background: 
+    linear-gradient(
+      rgba(255,255,255,.9), 
+      rgba(255,255,255,0.75)
+    ), url('infobckgrnd.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: inset 0px 0px 50px grey;
+    .b {
+        max-width: 350px;
+    }
+    .g {
+        max-width: 330px;
+    }
 }
 
 .burger {
@@ -257,7 +285,7 @@ h1.dooziesTextLogo {
 
 .loc {
     height: 120px;
-    width: 150px;
+    width: 120px;
     margin-left: auto;
     margin-right: auto;
     background: url('DooziesWebIcon.png');
@@ -265,6 +293,24 @@ h1.dooziesTextLogo {
     background-size: 120px ;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 5px black;
+    border-radius: 50%;
+}
+
+@media all and (max-width: 1275px) {
+    .carousel-inner {
+        height: 800px;
+    }
+    
+    .carousel-inner > .item {
+        height: 800px;
+    }
+}
+
+@media all and (max-width: 1199px) {
+    .navdiv{
+        margin: 0 auto;
+        width: 200px;
+    }
 }
 
 @media all and (max-width: 1141px) {
@@ -281,11 +327,29 @@ h1.dooziesTextLogo {
     }
 }
 
+@media all and (max-width: 1025px) {
+    .carousel-inner {
+        height: 600px;
+    }
+    
+    .carousel-inner > .item {
+        height: 600px;
+        margin-top: 75px;
+    }
+}
+
+@media all and (max-width: 991px) {
+    .locationdiv{
+        padding-top: 20px;
+    }
+}
+
 @media all and (max-width: 767px) {
     h1.dooziesTextLogo {
         display: inline;
         padding-left: 15px;
         line-height: 2em;
+        color: #333333;
     }
     
     .navbar {
@@ -301,6 +365,11 @@ h1.dooziesTextLogo {
         margin-top: 0;
     }
     
+    .logoContainer{
+        width: 275px;
+        margin: 0;
+    }
+    
     .doozieslogo {
         background: url('DooziesWebIcon.png');
         background-size: 75px 75px;
@@ -309,12 +378,85 @@ h1.dooziesTextLogo {
         height: 75px;
     }
     
-    .menu_container{
+    .menu_container {
         padding-top: 25px;
     }
+    
+    #page-nav {
+        float: right;
+        padding-top: 30px;
+        
+    }
+    
+    .navdiv {
+        width: 157px;
+        li:nth-of-type(2) {
+            padding-right: 0;
+            margin-right: 0;
+        }
+    }
+    
+    .hook_div {
+        .col-md-12{
+            padding: 100px 0px 100px 0px;
+        }
+    }
+    
+}
+
+@media all and (max-width: 640px) {
+    
+    .carousel-inner {
+        height: 350px;
+    }
+    
+    .carousel-inner > .item {
+        height: 350px;
+    }
+    
+    .hook_div {
+        
+        h1 {
+            font-size: 3em;
+        }
+        h2 {
+            font-size: 2em;
+        }
+        
+    }
+    
+}
+
+@media all and (max-width: 523px) {
+    
+    .logoContainer {
+        margin: 0 auto;
+    }
+    
+    .doozieslogo {
+        background-size: 50px 50px;
+        width: 50px;
+        height: 50px;
+    }
+    
+    h1.dooziesTextLogo {
+        padding-left: 15px;
+        line-height: 1.5em;
+    }
+    
+    #page-nav {
+        padding-top: 60px;
+        float: none;
+    }
+    
+    .navdiv {
+        margin: 0 auto;
+    }
+    
 }
 
 @media all and (max-width: 500px) {
+    
     .carousel-inner {
         height: 300px;
     }
@@ -323,14 +465,30 @@ h1.dooziesTextLogo {
         height: 300px;
     }
     
+}
+
+@media all and (max-width: 375px) {
+    
+    .carousel-inner {
+        height: 200px;
+    }
+    
+    .carousel-inner > .item {
+        height: 200px;
+    }
+    
     .hook_div {
-    padding-top: 60px;
+        
         h1 {
-            font-size: 3.5em;
+            font-size: 2.5em;
         }
         h2 {
-            font-size: 2.75em;
+            font-size: 1.75em;
         }
+    }
+    
+    .about h2 {
+        font-size: 1.5em;
     }
     
 }
@@ -343,5 +501,7 @@ h1.dooziesTextLogo {
     background: $green;
     p {
         opacity: .5;
+        font-size: .75em;
+        margin: 5px 0px;
     }
 }
